lkl: include x86 headers from the new location.
There were two changes since the last merge:
 * i386 and x64 were merged into x86
 * include/asm-$ARCH/* moved to arch/$ARCH/include/asm/

We include the same files using relative paths.
Also modified LINUXINCLUDE to include arch/ so we can do
     #include <x86/stuff.h>
and not use relative include paths.

--- a/arch/lkl/Makefile
+++ b/arch/lkl/Makefile
@@ -19,6 +19,7 @@ LDFLAGS_vmlinux := -r
 arch_dir = arch/lkl
 
 CFLAGS += -fno-builtin -g 
+LINUXINCLUDE += -I$(srctree)/arch
 
 KALLSYMS += --symbol-prefix=$(shell echo | $(CROSS_COMPILE)cpp -dM | grep USER_LABEL_PREFIX | cut -f3 -d ' ')
 
