lkl: only check pt_regs->ip if on native __i386__, not on um or lkl
Also changes arch/lkl/Makefile to change KBUILD_CFLAGS, and not CFLAGS
as other architectures do.

Fix:
CC      kernel/signal.o
  kernel/signal.c: In function ‘print_fatal_signal’:
  kernel/signal.c:900: error: ‘struct pt_regs’ has no member named ‘ip’
  kernel/signal.c:906: error: ‘struct pt_regs’ has no member named ‘ip’

--- a/arch/lkl/Makefile
+++ b/arch/lkl/Makefile
@@ -18,7 +18,10 @@ LDFLAGS_vmlinux := -r
 
 arch_dir = arch/lkl
 
-CFLAGS += -fno-builtin -g 
+KBUILD_CFLAGS += -fno-builtin -g
+def_arch = -D__arch_lkl__
+KBUILD_CPPFLAGS +=  $(def_arch)
+CHECKFLAGS     += $(def_arch)
 LINUXINCLUDE += -I$(srctree)/arch
 
 KALLSYMS += --symbol-prefix=$(shell echo | $(CROSS_COMPILE)cpp -dM | grep USER_LABEL_PREFIX | cut -f3 -d ' ')
