--- a/arch/lkl/Kconfig
+++ b/arch/lkl/Kconfig
@@ -89,6 +89,10 @@ config BLK_DEV_INITRD
 	bool
 	default n
 
+config GENERIC_CLOCKEVENTS
+        bool
+	default y
+
 config GENERIC_CLOCKEVENTS_BUILD
 	bool
 	default y
