lkl: fix Makefile to use LOCAL_CFLAGS, not CFLAGS
  SYSMAP  .tmp_System.map
make -f scripts/Makefile.build obj=arch/lkl/envs/ lkl.a
scripts/Makefile.build:46: *** CFLAGS was changed in "arch/lkl/envs//Makefile". Fix it to use EXTRA_CFLAGS.  Stop.
make[2]: *** [lkl.a] Error 2

Not using EXTRA_CFLAGS to not mess with stuff used by the kernel.
We're also not using KBUILD_CFLAGS or KBUILD_CPPFLAGS because we *don't* want
__KERNEL__ to be defined: the files in envs/ use other libraries or the system API
to implement their functionality. Having __KERNEL__ defined when including some
system APIs will break them.

--- a/arch/lkl/envs/Makefile
+++ b/arch/lkl/envs/Makefile
@@ -1,8 +1,8 @@
-CFLAGS=-Wall $(LINUXINCLUDE) $(EXTRA_CFLAGS) $(LKLENV_CFLAGS)
+LOCAL_CFLAGS = $(CFLAGS) $(LINUXINCLUDE) $(LKLENV_CFLAGS) $(def_arch)
 
 $(obj)/%.o: $(srctree)/$(src)/%.c
 	mkdir -p `dirname $@`
-	$(CROSS_COMPILE)gcc $(CFLAGS) -c -o $@ $^ 
+	$(CROSS_COMPILE)gcc $(LOCAL_CFLAGS) -c -o $@ $^
 
 _ENV=$(if $(CONFIG_LKL_ENV_POSIX),posix)
 _ENV+=$(if $(CONFIG_LKL_ENV_NT),nt)
