--- a/arch/lkl/kernel/Makefile
+++ b/arch/lkl/kernel/Makefile
@@ -2,7 +2,7 @@
 
 extra-y := vmlinux.lds
 
-obj-y = setup.o mem.o threads.o irq.o timer.o syscalls.o
+obj-y = setup.o mem.o threads.o irq.o timer.o syscalls.o traps.o
 
 
 
