lkl: mingw support: provide only one early_irq_init()
mingw does not handle __weak well.
early_irq_init() is defined in kernel/irq/handle.c which
is compiled if CONFIG_GENERIC_HARDIRQS is defined.
If CONFIG_GENERIC_HARDIRQS is defined do not provide this
default implementation.

--- a/arch/lkl/envs/Makefile
+++ b/arch/lkl/envs/Makefile
@@ -1,4 +1,4 @@
-LOCAL_CFLAGS = $(CFLAGS) $(LINUXINCLUDE) $(LKLENV_CFLAGS) $(def_arch)
+LOCAL_CFLAGS = $(EXTRA_CFLAGS) $(CFLAGS) $(LINUXINCLUDE) $(LKLENV_CFLAGS) $(def_arch)
 
 $(obj)/%.o: $(srctree)/$(src)/%.c
 	mkdir -p `dirname $@`
